Added onClickListeners for all buttons & Properly linked activities.

--- a/app/src/main/res/layout/activity_existing_user.xml
+++ b/app/src/main/res/layout/activity_existing_user.xml
@@ -61,6 +61,7 @@
         android:backgroundTint="@color/sky_blue"
         android:textColor="@color/black"
         android:textSize="15sp"
+        android:onClick="existingUserLoginBtn"
         />
 
  </LinearLayout>
