--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -110,7 +110,7 @@
             android:textColor="@color/black"
             android:textSize="15sp"
             tools:ignore="SmallSp"
-            android:onClick="addButtonClick"/>
+            android:onClick="newUserConfirmBtn"/>
 
     </LinearLayout>
 
