--- a/app/src/main/res/layout/activity_requestservices.xml
+++ b/app/src/main/res/layout/activity_requestservices.xml
@@ -112,5 +112,9 @@
         android:layout_marginBottom="50dp"
         android:onClick="requestServiceNext"/>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/requestServicesFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
