Finished Login.java/Register.java authentication

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExistingUser"
+    tools:context=".Login"
    >
 
     <LinearLayout
@@ -16,7 +16,7 @@
         android:gravity="center_horizontal">
 
     <TextView
-        android:id="@+id/activity_existing_user_textView"
+        android:id="@+id/activity_login_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
@@ -28,7 +28,7 @@
 
 
     <EditText
-        android:id="@+id/activity_existing_user_login_editText"
+        android:id="@+id/activity_login_email_editText"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginBottom="25dp"
@@ -40,7 +40,7 @@
         android:textSize="25sp" />
 
     <EditText
-        android:id="@+id/activity_existing_user_password_editText"
+        android:id="@+id/activity_login_password_editText"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginBottom="25dp"
@@ -53,7 +53,7 @@
         android:textSize="25sp" />
 
     <Button
-        android:id="@+id/activity_existing_user_loginBtn"
+        android:id="@+id/activity_login_loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -61,8 +61,23 @@
         android:backgroundTint="@color/sky_blue"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:onClick="existingUserLoginBtn"
+        android:onClick="loginLoginBtn"
+        android:layout_marginBottom="25dp"
         />
+        <ProgressBar
+            android:id="@+id/activity_login_progressBar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:visibility="invisible"/>
+        <TextView
+            android:id="@+id/forgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/forgot_password"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/white"
+            android:onClick="forgotPassword"/>
 
  </LinearLayout>
 
