--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="25dp"/>
 
     <LinearLayout
+        android:id="@+id/hompage_lin1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -55,6 +56,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/homepage_lin2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -101,4 +103,10 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/fragment_account_info_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
