--- a/app/src/main/res/layout/fragment_account_information.xml
+++ b/app/src/main/res/layout/fragment_account_information.xml
@@ -36,6 +36,7 @@
             android:orientation="horizontal"
             >
         <TextView
+            android:id="@+id/t1username"
             android:layout_width="175dp"
             android:layout_height="50dp"
             android:text="@string/update_username"
@@ -51,7 +52,8 @@
             android:hint="@string/new_username"
             android:inputType="text"
             android:textColor="@color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:importantForAutofill="no" />
         </LinearLayout>
 
         <LinearLayout
@@ -76,7 +78,8 @@
                 android:inputType="textPersonName"
                 android:hint="@string/new_name"
                 android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:importantForAutofill="no" />
         </LinearLayout>
 
         <LinearLayout
@@ -101,7 +104,8 @@
                 android:inputType="textPostalAddress"
                 android:hint="@string/new_address"
                 android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:importantForAutofill="no" />
         </LinearLayout>
 
         <LinearLayout
@@ -110,10 +114,9 @@
             android:orientation="horizontal"
             >
             <TextView
-
                 android:layout_width="175dp"
                 android:layout_height="50dp"
-                android:text="Update Number:"
+                android:text="@string/update_number"
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:layout_marginEnd="10dp"/>
@@ -126,7 +129,8 @@
                 android:inputType="phone"
                 android:hint="@string/new_number"
                 android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:importantForAutofill="no" />
         </LinearLayout>
 
         <LinearLayout
@@ -151,7 +155,8 @@
                 android:hint="@string/new_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:importantForAutofill="no" />
         </LinearLayout>
 
     </LinearLayout>
@@ -174,7 +179,8 @@
             android:text="@string/common_google_play_services_update_button"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:onClick="updateInfo"/>
+            android:onClick="updateInfo"
+            tools:ignore="ButtonStyle,OnClick,UsingOnClickInXml" />
 
         <Button
             android:id="@+id/close_fragment_btn"
@@ -184,6 +190,7 @@
             android:text="@string/close"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:onClick="closeFrag"/>
+            android:onClick="closeFrag"
+            tools:ignore="ButtonStyle,OnClick,UsingOnClickInXml" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
